--- a/index.html
+++ b/index.html
@@ -88,17 +88,90 @@
                 <div class="col-12 col-sm-6 align-self-center">
                   <img src="img\logo.png" class="img-fluid">
                   <div>
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tootltip"
+                    <span clas="navbar-text">
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#loginModal1"
                     data-html="true" title="or call us at <br><strong>+852 12345678</strong></br>"
                     data-placement="bottom" href="#reserveform">
                       Reserve Table
                     </a>
+                    </span>
+
                   </div>
 
                 </div>
             </div>
         </div>
     </header>
+
+    <div id="loginModal1" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg" role="content">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Login</h4>
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group row">
+                <label for="Number of Guests" class="col-md-2 col-form-label">number of guests</label>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                  <label class="form-check-label" for="inlineRadio1">1</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                  <label class="form-check-label" for="inlineRadio2">2</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled>
+                  <label class="form-check-label" for="inlineRadio3">3</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                  <label class="form-check-label" for="inlineRadio1">4</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                  <label class="form-check-label" for="inlineRadio2">5</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled>
+                  <label class="form-check-label" for="inlineRadio3">6</label>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="section" class="col-md-2 col-form-label">Section</label>
+                <div class="col-md-auto">
+                  <button type="button" class="btn-success">Non-Smoking</button>
+                  <button type="button" class="btn-danger">Smoking</button>
+                </div>
+              </div>
+
+                <div class="form-group row">
+                  <label for="date" class="col-md-2 col-form-label">Date and time</label>
+                  <div class="col-md-4">
+                    <input type="text" class="form-control" id="date" name="firstname" placeholder="Date">
+
+                  </div>
+                  <div class="col-md-4">
+                    <input type="text" class="form-control" id="time" name="lastname" placeholder="Time">
+                  </div>
+                </div>
+
+              <div class="form-group row">
+                <div class="offset-md-2 col-md-10">
+                  <button type="submit" class="btn btn-primary">
+                    Reserve
+                  </button>
+                </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
 
     <div class="container">
       <div class="row row-content">
@@ -145,8 +218,14 @@
             <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                <span class="carousel-control-next-icon"></span>
             </a>
-
-
+            <div class="btn-group" id="carouselButton">
+              <button class="btn btn-danger btn-sm" id="carousle-pause">
+                <span class="fa fa-pause"></span>
+              </button>
+              <button class="btn btn-danger btn-sm" id="carousle-play">
+                <span class="fa fa-play"></span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -201,60 +280,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-sm-8 align-items-center">
-          <div class="card">
-            <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-            <div class="card-body">
-              <form id="Information">
-                <div class="form-group row">
-                  <label for="Number of Guests" class="col-md-2 col-form-label">number of guests</label>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                    <label class="form-check-label" for="inlineRadio1">1</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                    <label class="form-check-label" for="inlineRadio2">2</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled>
-                    <label class="form-check-label" for="inlineRadio3">3</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                    <label class="form-check-label" for="inlineRadio1">4</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                    <label class="form-check-label" for="inlineRadio2">5</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled>
-                    <label class="form-check-label" for="inlineRadio3">6</label>
-                  </div>
-                </div>
 
-                  <div class="form-group row">
-                    <label for="date" class="col-md-2 col-form-label">Date and time</label>
-                    <div class="col-md-8">
-                      <input type="text" class="form-control" id="date" name="firstname" placeholder="Date">
-                      <input type="text" class="form-control" id="time" name="lastname" placeholder="Time">
-                    </div>
-                  </div>
-
-                <div class="form-group row">
-                  <div class="offset-md-2 col-md-10">
-                    <button type="submit" class="btn btn-primary">
-                      Reserve
-                    </button>
-                  </div>
-              </form>
-
-            </div>
-          </div>
-        </div>
-
-        </div>
     </div>
 
     <footer>
@@ -304,7 +330,14 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
        $(document).ready(function(){
-         $('[data-toggle="tooltip"]').tooltip();
+         $('#mycarousel').carousel({interval: 2000});
+         $('#carousel-pause').click(function(){
+           $('#mycarousel').carousel('pause')
+         });
+         $('#carousel-play').click(function(){
+           $('#mycarousel').carousel('cycle')
+         });
+
        });
     </script>
 </body>
